--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ openpyxl
 xlsxwriter
 pytz
 pdfplumber
-streamlit-authenticator
 psycopg2-binary
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
